--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 astroid==1.6.5
+atomicwrites==1.2.1
+attrs==18.2.0
 backports.functools-lru-cache==1.5
 Click==7.0
 configparser==3.5.0
+coverage==4.5.1
 enum34==1.1.6
 Flask==1.0.2
 Flask-JWT-Extended==3.13.0
+funcsigs==1.0.2
 futures==3.2.0
 isort==4.3.4
 itsdangerous==0.24
@@ -12,9 +16,18 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
-pkg-resources==0.0.0
+mock==2.0.0
+more-itertools==4.3.0
+nose2==0.8.0
+pathlib2==2.3.2
+pbr==4.2.0
+pluggy==0.7.1
+py==1.6.0
 PyJWT==1.6.4
 pylint==1.9.3
+pytest==3.8.1
+pytest-cov==2.6.0
+scandir==1.9.0
 singledispatch==3.4.0.3
 six==1.11.0
 Werkzeug==0.14.1
